[[release-notes-5.9.3]]
== 5.9.3

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/67?closed=1+[5.9.3] milestone page in the
JUnit repository on GitHub.


[[release-notes-5.9.3-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.9.3-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* Exceptions thrown for undeletable files when cleaning up a temporary directory created
  via `@TempDir` now include the root cause.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


= [[release-notes-5.9.3-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓